# wtf_cmd

./: README.md  pyproject.toml
src/wtf_cmd/: .cmd.py.swp  cmd.py
